--- a/MarsP.html
+++ b/MarsP.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개인정보처리방침</title>
+    <title>화성갈끄니까 개인정보처리방침</title>
     <style>
         body {
             font-family: Arial, sans-serif;
