--- a/MarsP.html
+++ b/MarsP.html
@@ -37,49 +37,80 @@
     <h1>개인정보처리방침</h1>
     <p>본 개인정보처리방침은 회사가 운영하는 웹사이트 및 서비스(이하 "서비스")에서 수집, 저장, 사용, 제공되는 개인정보와 관련하여 고객님의 권익 보호를 위해 제정되었습니다.</p>
 
-    <h2>수집하는 개인정보의 항목</h2>
-    <p>회사는 서비스의 이용과정에서 다음과 같은 개인정보를 수집합니다.</p>
-    <ul>
-        
-        <li>이름</li>
-        <li>이메일 주소</li>
-        <li>전화번호</li>
-        <li>주소</li>
-    </ul>
+</br>
 
-    <h2>개인정보의 수집 및 이용목적</h2>
-    <p>회사는 수집한 개인정보를 다음과 같은 목적으로 이용합니다.</p>
-    <ul>
-        <li>회원 가입 및 관리</li>
-        <li>서비스 제공에 관한 계약 이행 및 서비스 제공에 따른 요금정산</li>
-        <li>고지사항 전달</li>
-        <li>마케팅 및 광고에 활용</li>
-    </ul>
+‘화성갈끄니까 는 (이하 ‘개발사’는) 고객님의 개인정보를 중요시하며, "정보통신망 이용촉진 및 정보보호"에 관한 법률을 준수하고 있습니다.</br>
+회사는 개인정보취급방침을 통하여 고객님께서 제공하시는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.</br>
+</br></br>
+회사는 개인정보취급방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.</br>
+</br></br>
+ο 본 방침은 : 2023년 6월 20일 부터 시행됩니다.</br>
+</br></br>
 
-    <h2>개인정보의 보유 및 이용기간</h2>
-    <p>회사는 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다.</p>
+■ 수집하는 개인정보 항목</br></br>
 
-    <h2>개인정보의 파기절차 및 방법</h2>
-    <p>회사는 원칙적으로 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다. 파기절차 및 방법은 다음과 같습니다.</p>
-    <ul>
-        <li>파기절차: 회원님이 서비스 이용 계약 해지를 요청하거나, 개인정보 수집 및 이용목적이 달성된 후 개인정보가 불필요한 경우에는 해당 정보를 데이터베이스에서 삭제하며, 출력물은 분쇄기로 분쇄하거나 소각하여 파기합니다.</li>
-        <li>파기방법: 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.</li>
-    </ul>
+회사는 회원가입, 상담, 서비스 신청 등등을 위해 아래와 같은 개인정보를 수집하고 있습니다.</br></br>
 
-    <h2>개인정보 제공</h2>
-    <p>회사는 고객님의 개인정보를 원칙적으로 외부에 제공하지 않습니다. 다만, 아래의 경우에는 예외로 합니다.</p>
-    <ul>
-        <li>고객님의 사전 동의가 있는 경우</li>
-        <li>법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우</li>
-    </ul>
+ο 수집항목 : AdMob 광고 ID, 접속 로그</br>
+ο 개인정보 수집방법 : 앱 설치 및 실행</br>
 
-    <h2>고객님의 권리와 그 행사방법</h2>
-    <p>고객님은 언제든지 자신의 개인정보를 조회하거나 수정할 수 있으며, 개인정보 삭제를 요청할 수 있습니다.</p>
-    <ul>
-        <li>개인정보 조회 및 수정을 위해서는 서비스 내 개인정보 수정 기능을 이용하거나, 서비스 운영자에게 문의하시면 됩니다.</li>
-        <li>개인정보 삭제를 원하는 경우, 서비스 운영자에게 서면, 전화, 이메일 등으로 연락하여 삭제 요청을 하시면 지체 없이 조치하겠습니다.</li>
-    </ul>
+</br>
+■ 개인정보의 수집 및 이용목적</br>
+</br>
+회사는 수집한 개인정보를 다음의 목적을 위해 활용합니다.</br>
+</br>
+ο 서비스 제공에 관한 계약 이행 : 콘텐츠 제공 , 물품배송 또는 청구지 등 발송</br>
+ο 회원 관리 : 개인 식별 , 불량회원의 부정 이용 방지와 비인가 사용 방지 , 불만처리 등 민원처리</br>
+ο 마케팅 및 광고에 활용 : 접속 빈도 파악 또는 회원의 서비스 이용에 대한 통계</br>
+</br>
+</br>
+■ 개인정보의 보유 및 이용기간</br>
+</br>
+회사는 개인정보 수집 및 이용목적이 달성된 후에는 예외 없이 해당 정보를 지체 없이 파기합니다.</br>
+</br>
+</br>
+■ 개인정보의 파기절차 및 방법</br>
+</br>
+회사는 원칙적으로 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체없이 파기합니다. 파기절차 및 방법은 다음과 같습니다.</br>
+</br>
+ο 파기절차 : 회원님이 회원가입 등을 위해 입력하신 정보는 목적이 달성된 후 (회원 탈퇴시) 즉시 파기됩니다.</br>
+</br>
+ο 파기방법 : 전자적 파일형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.</br>
+</br>
+</br>
+■ 개인정보 제공</br>
+</br>
+회사는 이용자의 개인정보를 원칙적으로 외부에 제공하지 않습니다. 다만, 아래의 경우에는 예외로 합니다.</br>
+</br>
+- 이용자들이 사전에 동의한 경우</br>
+</br>
+- 법령의 규정에 의거하거나, 수사 목적으로 법령에 정해진 절차와 방법에 따라 수사기관의 요구가 있는 경우</br>
+</br>
+</br>
+■ 수집한 개인정보의 위탁</br>
+</br>
+회사는 고객님의 동의없이 고객님의 정보를 외부 업체에 위탁하지 않습니다. 향후 그러한 필요가 생길 경우, 위탁 대상자와 위탁 업무 내용에 대해 고객님에게 통지하고 필요한 경우 사전 동의를 받도록 하겠습니다.</br>
+</br>
+    </br>
+■ 개인정보 자동수집 장치의 설치, 운영 및 그 거부에 관한 사항</br>
+</br>
+쿠키 등 인터넷 서비스 이용 시 자동 생성되는 개인정보를 수집하는 장치를 운영하지 않습니다.</br>
+</br>
+ </br>
+귀하께서는 회사의 서비스를 이용하시며 발생하는 모든 개인정보보호 관련 민원을 개인정보관리책임자 혹은 담당부서로 신고하실 수 있습니다. 화성갈끄니까(은)는 이용자들의 신고사항에 대해 신속하게 충분한 답변을 드릴 것입니다.</br>
+</br>
+</br>
+기타 개인정보침해에 대한 신고나 상담이 필요하신 경우에는 아래 기관에 문의하시기 바랍니다.</br>
+</br>
+1.개인정보침해신고센터 (www.1336.or.kr/국번없이 118)</br>
+</br>
+2.정보보호마크인증위원회 (www.eprivacy.or.kr/02-580-0533~4)</br>
+</br>
+3.대검찰청 인터넷범죄수사센터 (http://icic.sppo.go.kr/02-3480-3600)</br>
+</br>
+4.경찰청 사이버테러대응센터 (www.ctrc.go.kr/02-392-0330)
 
-    <p>본 개인정보처리방침은 20XX년 XX월 XX일부터 시행됩니다.</p>
+ 
+
 </body>
 </html>
